@@ -39,6 +39,11 @@
 		<version>4.1.6.RELEASE</version>
 	</dependency>
 	<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
+	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
 		<version>4.12</version>
@@ -62,24 +67,15 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.3</version>
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
+					<testExcludes>
+						<excludes>**/*Test*.java</excludes>
+					</testExcludes>
 				</configuration>
 			</plugin>
-			<plugin>
-		    <groupId>org.apache.maven.plugins</groupId>
-		    <artifactId>maven-surefire-plugin</artifactId>
-		    <version>2.4.2</version>
-		    <configuration>
-		    <skipTests>false</skipTests>
-		    <argLine>-Xms1024m -Xmx1024m -XX:PermSize=1024m -XX:MaxPermSize=1024m</argLine>		 	  
-		      <excludes>
-		        <exclude>**/junitTest/*.java</exclude>
-		       </excludes>
-		    </configuration>
-		  </plugin>
 		</plugins>
 	</build>
   
